// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders children 1`] = `
<div
  className="box-header"
>
  <div>
    I'm a child!
  </div>
</div>
`;

exports[`renders default 1`] = `
<div
  className="box-header"
/>
`;

exports[`renders tools function 1`] = `
<div
  className="box-header"
>
  <div
    className="box-tools pull-right my-class"
  >
    <div>
      I'm a small tool!
    </div>
    <div>
      I'm a medium tool!
    </div>
  </div>
</div>
`;

exports[`renders tools node 1`] = `
<div
  className="box-header"
>
  <div
    className="box-tools pull-right"
  >
    <div
      key="1"
    >
      I'm a tool!
    </div>
    <div
      key="2"
    >
      I'm a bigger tool!
    </div>
  </div>
</div>
`;
